# ComfyUI-GridSplit

./: .gitignore  LICENSE  README.md  __init__.py  gridsplit.py  nodes.py  pyproject.toml
example_workflows/: autogrid_example.json
web/: gridstitch_grid.js
